--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "laraveles/spanish": "^1.4",
         "league/flysystem-sftp": "^1.0",
         "maatwebsite/excel": "^3.1"
     },
